Fix Implementation panel: remove align-self flex-end and add width 100% to fix positioning and width issues

--- a/03_Computer_Vision/network_visualizer/resnet50/assets/css/resnet50-visualizer.css
+++ b/03_Computer_Vision/network_visualizer/resnet50/assets/css/resnet50-visualizer.css
@@ -375,7 +375,7 @@
     position: relative;
     transition: none;
     overflow: hidden;
-    align-self: flex-end;
+    width: 100%;
 }
 
 .code-implementation-panel.collapsed {
